Update component types

--- a/src/assets/scss/partials/_tokens.scss
+++ b/src/assets/scss/partials/_tokens.scss
@@ -2,6 +2,7 @@
 // --------------------
 $color-primary: #014CB1;
 $color-primary-lighter: #C9E8FB;
+$color-primary-lightest: #E6F3FC;
 $color-secondary: #699B9B;
 
 $color-neutral-white: #FFFFFF;
@@ -37,7 +38,7 @@ $border-weight-heaviest: 16px;
 
 // Font Family
 $font-size-base: 16px;
-$font-family-base: Georgia,"Times New Roman",Times,serif;
+$font-family-base: monospace;
 $font-family-highlight: "Alegreya Sans","sans-serif";
 
 // Basic modular scale definition:
