Create investees table

--- a/src/assets/scss/partials/_base.scss
+++ b/src/assets/scss/partials/_base.scss
@@ -27,6 +27,7 @@ html, body {
   font-family: tokens.$font-family-base;
   font-weight: tokens.$font-weight-regular;
   line-height: tokens.$font-lineheight-base;
+  padding: 0;
 }
 
 h1 {
