--- a/src/assets/scss/partials/_functions.scss
+++ b/src/assets/scss/partials/_functions.scss
@@ -1,14 +1,17 @@
 @use 'sass:list';
 @use 'sass:math';
+@use 'sass:map';
+
+@use './tokens';
 
 @function ms($scale) {
 
-  $base: map-get($modularscale, base);
-  $ratio: map-get($modularscale, ratio);
+  $base: map.get(tokens.$modularscale, base);
+  $ratio: map.get(tokens.$modularscale, ratio);
 
   @return $base * pow($ratio, $scale);
 }
 
 @function z-number($element, $delta: 0) {
-  @return map-get($z-index, $element) + $delta;
+  @return map.get($z-index, $element) + $delta;
 }
